The Tag has to be a List
I had to specify that the Tags it is a list i have to add some other
Tags as well for some other resources

--- a/ibm-mq-efs.yaml
+++ b/ibm-mq-efs.yaml
@@ -158,7 +158,7 @@ Resources:
       MaxSize: "1"
       DesiredCapacity: "1"
       Tags:
-        Key: "Name"
+      - Key: "Name"
         Value: "mq-efs"
         PropagateAtLaunch: "true"
     UpdatePolicy:
